add delete on our cars

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -90,7 +90,7 @@
                 <% cars.forEach(car => { %>
                   <div class="col-md-3">
                     <div class="card shadow-sm">
-                      <% if (locals.photo) { %>
+                      <% if (locals.cars) { %>
                         <img src="<%= car.photos[0][0].replace("/public", ""); %>" alt="<%= car.make %> <%= car.model %>" width="100%" height="225">
                       <% } else { %>
                         <img src="/assets/images/no-image.jpg" alt="No-Image" width="100%" height="225">
