--- a/views/ourcars.ejs
+++ b/views/ourcars.ejs
@@ -6,8 +6,8 @@
         <% cars.forEach(car => { %>
         <div class="col-md-3">
             <div class="card shadow-sm">
-                <% if (locals.photo) { %>
-                  <img src="<%= photo %>" alt="<%= car.make %> <%= car.model %>" width="100%" height="225">
+                <% if (locals.cars) { %>
+                  <img src="<%= car.photos[0][0].replace("/public", "");  %>" alt="<%= car.make %> <%= car.model %>" width="100%" height="225">
                 <% } else { %>
                   <img src="/assets/images/no-image.jpg" alt="No-Image" width="100%" height="225">
                 <% } %>
@@ -32,7 +32,7 @@
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                       <li><a class="dropdown-item view" href="#">View</a></li>
                       <li><a class="dropdown-item edit" href="ourcars/edit/<%= car.id %>">Edit</a></li>
-                      <li><a class="dropdown-item delete" href="#">Delete</a></li>
+                      <li><a class="dropdown-item delete" href="ourcars/delete/<%= car.id %>">Delete</a></li>
                     </ul>
                 </div>
               </div>
